索引のお試し、PDF出力データを追加

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -7,9 +7,7 @@
 重要なのは、創造的で見識にあふれた人々により、プロダクトの特徴や市場の需要に適した成熟したプロセスに従い、ソフトウェエンジニアリングが行われるべきだという点である。
 
 
-★下記、まとめと適したタイトル調整を検討、プロセスモデルの構造（orメタプロセスモデル）と一般的なプロセスモデルいった表現でもよい★
-
-## 2.1 一般的なプロセスモデル
+## 2.1 <span class="index">プロセスモデル</span>の構造と<span class="index">プロセスフロー</span>
 
 プロセスは成果物が生み出される際に実施される一連のアクティビティ、アクション、タスクを含むと第1章にて記述した。これらアクティビティ、アクション、タスクはモデルやフレームワークを用いることでプロセスとの関連性が表現できる。
 
@@ -30,9 +28,7 @@ quality assurance points  品質保証ポイント
 project milestones  プロジェクトマイルストン
 ```
 
-第1章では、ソフトウェアエンジニアリングにおけるプロセスフレームワークとして5つの一般的なフレームワークアクティビティを定義した。コミュニケーション、計画策定、モデリング、構築、デプロイである。あわせて、ソフトウェアプロジェクトの追跡と管理、リスクマネジメント、品質保証、構成管理、テクニカルレビューといった包括的なアクティビティがプロセス全体に適用される。
-
-★以下の最初の文は、少し意訳ですが、表現かえております★
+第1章では、ソフトウェアエンジニアリングにおける<span class="index">プロセスフレームワーク</span>として5つの一般的なフレームワークアクティビティを定義した。コミュニケーション、計画策定、モデリング、構築、デプロイである。あわせて、ソフトウェアプロジェクトの追跡と管理、リスクマネジメント、品質保証、構成管理、テクニカルレビューといった包括的なアクティビティがプロセス全体に適用される。
 
 ここで、ソフトウェアプロセスの重要な側面をもうひとつ紹介する。「プロセスフロー」は、プロセスフレームワーク内でフレームワークアクティビティ（アクションやタスクを含む）がどのような順序、時系列で発生するかの体系を示す。図2.2にプロセスフローを図示する。
 
@@ -53,9 +49,8 @@ Deployment  デプロイ
 
 図2.2「（a）リニアプロセスフロー」では、5つのフレームワークアクティビティは順番に実行される。コミュニケーションから始まり、デプロイで締めくくられる。「（b）反復プロセスフロー」では、とあるアクティビティの前段階アクティビティが繰り返される。「（c）進化型プロセスフロー」では循環的にアクティビティが実行される。アクティビティの循環により、より進んだソフトウェアバージョンが生み出される。「（d）パラレルプロセスフロー」では、あるアクティビティと並行して他のアクティビティが実行される。ソフトウェアの一部分に対するモデリングアクティビティは、ソフトウェアの他部分の構築アクティビティと並行して実行される。
 
-★意味が変わってるのでタイトル名変えてます★
 
-## 2.2 フレームワークアクティビティとソフトウェアエンジニアリングアクション[訳注1]
+## 2.2 <span class="index">フレームワークアクティビティ</span>と<span class="index">ソフトウェアエンジニアリングアクション</span>[訳注1]
 
 第1章にて5つの一般的なフレームワークアクティビティ（コミュニケーション、計画策定、モデリング、構築、デプロイ）を取り上げ基本的な定義をしたが、ソフトウェアプロセスとしてこれらアクティビティを正しく実行しようとすると、ソフトウェアチームはより多くの情報を必要とするだろう。つまり、「解決すべき問題の本質や、担当者やプロジェクトのスポンサーとなるステークホルダの特徴にあわせて、どのようなアクションを行うことが各フレームワークアクティビティに求められるのか」という重要な疑問に直面するのである。
 
@@ -71,7 +66,7 @@ Deployment  デプロイ
 プロジェクトに多くのステークホルダがいて、各ステークホルダが異なる要求を持ち、それぞれの要求に対立が発生しているような複雑な状況下では、コミュニケーションのアクティビティに6つのアクションが必要となる。それは、方向付け（inception）、要求獲得（elicitation）、推敲（elaboration）、交渉（negotiation）、仕様化（specification）、検証（validation）である。各ソフトウェアエンジニアリングアクションには、いくつものタスクや成果物が求められる。
 
 
-## 2.3 タスクセットの特定
+## 2.3 <span class="index">タスクセット</span>の特定
 
 図2.1について再度確認しよう。各ソフトウェアエンジニアリングアクション（例：コミュニケーションアクティビティにて必要とされる要求獲得アクション）は、成果物、品質保証ポイント、プロジェクトマイルストン、実施するタスクの集合体であるタスクセットによって表現される。
 異なるプロジェクトでは、異なるタスクセットが求められる。プロジェクトのニーズやチームの特徴に最も適したタスクセットを選び抜く必要がある。このことは、特定のプロジェクトニーズやチームの特徴にあわせてソフトウェアエンジニアリングアクションを柔軟に対応させるべきだという意味でもある。
@@ -110,7 +105,7 @@ Deployment  デプロイ
 
 ## 2.4 プロセス評価と改善
 
-ソフトウェアプロセスが存在するからといって、ソフトウェアが納期に納品され、顧客ニーズを満たし、長期的な品質を確保できるという保証はない（第15章参照）。プロセスパターン[訳注2]は確固たるソフトウェアエンジニアリング（第2部参照）の実践と共に存在しなければならない。さらに、ソフトウェアエンジニアリングを成功させるために必要不可欠な基本的なプロセス基準を確実に満たすよう、プロセス自体も評価される必要がある[*1]。
+ソフトウェアプロセスが存在するからといって、ソフトウェアが納期に納品され、顧客ニーズを満たし、長期的な品質を確保できるという保証はない（第15章参照）。<span class="index">プロセスパターン</span>[訳注2]は確固たるソフトウェアエンジニアリング（第2部参照）の実践と共に存在しなければならない。さらに、ソフトウェアエンジニアリングを成功させるために必要不可欠な基本的なプロセス基準を確実に満たすよう、プロセス自体も評価される必要がある[*1]。
 
 [*1] SEIによるCMMI-DEV[CMM07]では、ソフトウェアプロセスの特徴とプロセスの成功へ向けた多数の基準を詳細に記している。
 
@@ -119,20 +114,18 @@ Deployment  デプロイ
 多くのエンジニアにおける今どきの考え方は、ソフトウェアプロセスやアクティビティは数値的な測定や分析（メトリクス）を用いて評価されるべきだというものである。プロセスを評価するソフトウェアプロセスメトリクスについては第17章を見るとよい。プロセスアセスメントや改善手法の詳細については、第28章に示している。
 
 
-★後で調整：ソフトウェアプロセス、プロセスという表現の揺らぎ（現状は原著に従った表現）。「プロセス」のみで表現して訳注をつけてもよいかも★
-
-## 2.5 規範的なプロセスモデル
+## 2.5 <span class="index">規範的なプロセスモデル</span>
 
 規範的なプロセスモデル[*2]では、プロセス要素を規定し、プロセスワークフローを定義する。規範的なプロセスモデルは、ソフトウェア開発に構造と秩序をもたらす。プロセスに定義された進捗ガイドに従い、アクティビティやタスクは順次実施されていく。しかし、変化に晒されるソフトウェアの世界において規範的プロセスモデルを採用することはふさわしいのだろうか。伝統的なプロセスモデル（およびそのモデルによる秩序）が否定され、より構造化されていない何かにプロセスが置き換えられた場合、ソフトウェア業務における協調や一貫性の維持は不可能とはならないだろうか。
 
 [*2] 規範的なプロセスモデルは、「伝統的な」プロセスモデルと呼ばれる時もある。
 
-これらの問いに簡単な答えはないが、ソフトウェアエンジニアにはいくつかの選択肢が存在する。本章では、秩序とプロジェクトの一貫性の維持を第一に考える規範的なプロセスのアプローチについて概要を紹介する。これらを「規範的」と呼ぶ理由は、どのプロセスも一連のプロセス要素であるフレームワークアクティビティ、ソフトウェアエンジニアリングアクション、タスク、成果物、品質保証、および変更管理の仕組みをプロジェクトで規定しているためである。各プロセスモデルは、プロセスフロー（ワークフローとも呼ばれる）を規定している。各プロセス要素は他の要素と相互関係を持つ。
+これらの問いに簡単な答えはないが、ソフトウェアエンジニアにはいくつかの選択肢が存在する。本章では、秩序とプロジェクトの一貫性の維持を第一に考える規範的なプロセスのアプローチについて概要を紹介する。これらを「規範的」と呼ぶ理由は、どのプロセスも一連のプロセス要素であるフレームワークアクティビティ、ソフトウェアエンジニアリングアクション、タスク、成果物、品質保証、および変更管理の仕組みをプロジェクトで規定しているためである。各プロセスモデルは、プロセスフロー（ワークフローとも呼ばれる）を規定している。各プロセス要素は他の要素と相互関係をもつ。
 
 あらゆるソフトウェアプロセスは、第1章で述べた一般的なフレームワークアクティビティを含む。しかし、プロセスによってどのアクティビティを重視するかは異なり、各フレームワークアクティビティ（ソフトウェアエンジニアリングアクションとタスクを含む）におけるプロセスフロー定義も異なる。第3章および第4章では、多くのソフトウェアプロジェクトにおいて避けられない変更に対応するためのソフトウェアエンジニアリングプラクティスについて記す。
 
 
-### 2.5.1 ウォーターフォールモデル
+### 2.5.1 <span class="index">ウォーターフォールモデル</span>
 
 ある問題に対する要求が十分理解されていて、コミュニケーションからデプロイまで順に作業を実施できる場合がある。こうした状況は、明確に定義された既存システムの修正や拡張（例えば、政府の規制変更により必ず実施しなければならない会計ソフトウェアの修正等）で発生する場合がある。また、一部の新規開発でも、要求が明確に定義されており、変更があまり起こらないことは同様に起こり得る。
 
@@ -176,7 +169,7 @@ feedback  フィードバック
 今日、ソフトウェア開発はスピードが求められ、（機能やフィーチャ、情報コンテンツに対する）変更の奔流に晒されている。ウォーターフォールモデルは、こうした状況には適していない。
 
 
-### 2.5.2 プロトタイピング
+### 2.5.2 <span class="index">プロトタイピング</span>
 
 ソフトウェアの大まかな目的は定まっていても、機能やフィーチャの詳細まで決まっていないことは多い。開発においても、アルゴリズムの効率、OSの適合性、ユーザインタフェースの使いやすさに自信のない場合がある。このような場合には、プロトタイピングのパラダイムが最良のアプローチとなるだろう。
 
@@ -212,11 +205,11 @@ Delivery & feedback  リリースとフィードバック
 このようにいくつか問題はあるが、プロトタイピングはソフトウェアエンジニアリングにおける有効なパラダイムである。重要なことは、最初にゲームのルールを決めておくことである。つまり、要求を定義するための道具としてプロトタイプをつくることを、あらゆるステークホルダに理解してもらう必要がある。時折、プロトタイプを最終的なプロダクトに育て上げようという意見が発生する。しかし実際には、顧客の変わりゆくニーズによって、プロトタイプは（少なくとも部分的に）廃棄されるものだ。
 
 
-### 2.5.3 進化型プロセスモデル
+### 2.5.3 <span class="index">進化型プロセスモデル</span>
 
 他の複雑なシステム同様、ソフトウェアは長い期間をかけて進化するものである。開発が進むにつれてビジネスやプロダクトに対する要求が変化するため、最終プロダクトへとまっすぐ突き進むことは現実的ではない。市場における厳しい納期制約において、複雑なソフトウェアプロダクトをすべて完成させることは不可能である。ただ、競合やビジネスにおける強い期待に応える限られたバージョンを作ることや、全体的なフィーチャが理解されたうえで改善を施したバージョンのリリースであれば可能である。このような状況では、成長し変化するプロダクトに適応するよう設計されたプロセスモデルが必要となる。
 
-Barry Boehm[Boe88] が最初に提案したスパイラルモデルは、反復型のプロトタイピングモデルとウォーターフォールモデルにおける体系的で統制された側面を組合せた進化型のプロセスモデルである。このモデルは、徐々に価値が高まるソフトウェアを迅速に開発できる特徴がある。
+Barry Boehm[Boe88] が最初に提案した<span class="index">スパイラルモデル</span>は、反復型のプロトタイピングモデルとウォーターフォールモデルにおける体系的で統制された側面を組合せた進化型のプロセスモデルである。このモデルは、徐々に価値が高まるソフトウェアを迅速に開発できる特徴がある。
 
 スパイラルモデルでは、進化型のリリースを繰り返しながらソフトウェア開発が行われる。この開発イテレーション（成果物を生み出す反復を意味する）における初期の成果物は、紙に描かれたモデルやプロトタイプの場合もある。後半の開発イテレーションでは、より価値の高いプロダクトが徐々にできあがっていく。
 
@@ -262,7 +255,7 @@ feedback  フィードバック
 [*6] ここでは、ソフトウェア品質を広い意味で定義している。顧客満足だけではなく、技術的な判断基準（第2部参照）も含めた意味をもつ。
 
 
-### 2.5.4 統一プロセス
+### 2.5.4 <span class="index">統一プロセス</span>
 
 ある意味、統一プロセス[Jac99]は伝統的なソフトウェアプロセスモデルにおける優れた特徴や性質を引き出そうとしているが、アジャイルソフトウェア開発（第3章参照）の優れた原則の多くも実装しているという特徴をもつ。統一プロセスは、顧客とのコミュニケーション、並びに顧客視点でシステムを記述する合理的な手法であるユースケース[*7]を重要視している。
 また、ソフトウェアアーキテクチャの重要性を強調しており、「アーキテクトが理解容易性、将来の変更への対応、および再利用のような正しいゴールへ集中できるようにしている」[Jac99]。統一プロセスは反復的かつインクリメンタルなプロセスフローを提唱し、現代のソフトウェア開発には不可欠な進化型の考え方を取り入れている。
@@ -314,11 +307,9 @@ Release  リリース
 あらゆるソフトウェアプロジェクトにおいて、統一プロセスにおけるワークフロー内のすべてのタスクが実行されるわけではない。チームは、必要に応じたプロセス（アクション、タスク、サブタスク、成果物）を採用すべきだ。
 
 
-## 2.6 プロダクトとプロセス
+## 2.6 <span class="index">プロダクト</span>とプロセス
 
 すでに紹介したプロセスについて、メリットとデメリットを表2.1にまとめた。本書における過去の版では他のプロセスモデルについても議論している。現実としては、どのプロセスもあらゆるプロジェクトに適用できるような完璧なものではない。たいてい、ソフトウェアチームは自分たちのプロジェクトのニーズにあわせて、2.5節で記載したプロセスモデルもしくは第3章記載のアジャイルプロセスモデルのいずれかのうち、1つもしくは複数を採用している。
-
-★原著の表から見やすいように表構造を変更してます★
 
 <!-- textlint-disable -->
 表2.1 プロセスモデルの比較
@@ -349,7 +340,7 @@ Release  リリース
 
 ## 2.7 まとめ
 
-ソフトウェアエンジニアリング向けの一般的なプロセスモデルは、プロセスフレームワーク、アクティビティ、アクション、タスクを包含したものである。プロセスフローによって、各プロセスモデル内のフレームワークアクティビティ、アクション、タスクがどのような順序、時系列で発生するかという体系の違いを表現できる。プロセスパターンは、ソフトウェアプロセスにおいて遭遇する共通的な問題を解決するために使われる。
+ソフトウェアエンジニアリング向けのプロセスモデルは、プロセスフレームワーク、アクティビティ、アクション、タスクを包含したものである。プロセスフローによって、各プロセスモデル内のフレームワークアクティビティ、アクション、タスクがどのような順序、時系列で発生するかという体系の違いを表現できる。プロセスパターンは、ソフトウェアプロセスにおいてよく遭遇する問題を解決するために使われる。
 
 規範的なソフトウェアプロセスモデルは、ソフトウェア開発に秩序と構造をもたらすことを目的として長年適用されてきた。これらのモデルが提案するプロセスフローは異なっているが、同一のフレームワークアクティビティ（コミュニケーション、計画策定、モデリング、構築、デプロイ）から構成される。
 
@@ -388,3 +379,7 @@ Release  リリース
 2.10. ソフトウェアコンポーネント、あるいはプログラム全体でさえも、それが正しいことを証明できる。では、なぜ皆がそれを行わないのだろうか。
 
 2.11. 統一プロセスとUMLは同じものか。その回答について説明せよ。
+
+<style scoped>
+.index {color: red; }
+</style>
